--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+    <!-- No dependencies listed -->
   </dependencies>
   <build>
     <finalName>flipkartApp</finalName>
