--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,18 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  <dependencies>
-    <!-- No dependencies listed -->
-  </dependencies>
-  <build>
+    <dependencies>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>        
+             </configuration>
+            </plugin>
+        </plugins>
     <finalName>flipkartApp</finalName>
   </build>
 </project>
